// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Message component should accept a react Element as renderAs prop 1`] = `
<DocumentFragment>
  <p
    class="message"
  >
    CustomThis should be a p element
  </p>
</DocumentFragment>
`;

exports[`Message component should concat classname in props with classname 1`] = `
<DocumentFragment>
  <article
    class="message other-class"
  >
    <div
      class="message-header"
    >
      Lorem Ipsum
    </div>
    <div
      class="message-body"
    >
      Lorem Ipsum
    </div>
  </article>
</DocumentFragment>
`;

exports[`Message component should have custom inline styles 1`] = `
<DocumentFragment>
  <section
    class="message"
    style="width: 200px; z-index: 1;"
  >
    This should be a section with custom styles
  </section>
</DocumentFragment>
`;

exports[`Message component should render 1`] = `
<DocumentFragment>
  <article
    class="message"
  >
    Content
  </article>
</DocumentFragment>
`;

exports[`Message component should render 2`] = `
<DocumentFragment>
  <div
    class="message-header"
  >
    Content
  </div>
</DocumentFragment>
`;

exports[`Message component should render 3`] = `
<DocumentFragment>
  <div
    class="message-body"
  >
    Content
  </div>
</DocumentFragment>
`;

exports[`Message component should render as an html section 1`] = `
<DocumentFragment>
  <section
    class="message"
  >
    This should be a section
  </section>
</DocumentFragment>
`;

exports[`Message component should render with all 1`] = `
<DocumentFragment>
  <article
    class="message"
  >
    <div
      class="message-header"
    >
      Lorem Ipsum
    </div>
    <div
      class="message-body"
    >
      Lorem Ipsum
    </div>
  </article>
</DocumentFragment>
`;
